iptables/iptables_save
# Generated by iptables-save v1.4.10 on Wed Nov 13 11:20:52 2013
*nat
:PREROUTING ACCEPT [303:29237]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [3:342]
:zone_lan_nat - [0:0]
:zone_lan_prerouting - [0:0]
:zone_wan_nat - [0:0]
:zone_wan_prerouting - [0:0]
-A PREROUTING -i br-lan -j zone_lan_prerouting 
-A PREROUTING -i eth0.1 -j zone_wan_prerouting 
-A POSTROUTING -o br-lan -j zone_lan_nat 
-A POSTROUTING -o eth0.1 -j zone_wan_nat 
-A zone_wan_nat -j SNAT --to-source 192.168.13.5 
COMMIT
# Completed on Wed Nov 13 11:20:52 2013
# Generated by iptables-save v1.4.10 on Wed Nov 13 11:20:52 2013
*raw
:PREROUTING ACCEPT [19240:4592446]
:OUTPUT ACCEPT [8154:3399023]
:zone_lan_notrack - [0:0]
:zone_wan_notrack - [0:0]
-A PREROUTING -i br-lan -j zone_lan_notrack 
-A PREROUTING -i eth0.1 -j zone_wan_notrack 
COMMIT
# Completed on Wed Nov 13 11:20:52 2013
# Generated by iptables-save v1.4.10 on Wed Nov 13 11:20:52 2013
*mangle
:PREROUTING ACCEPT [19240:4592446]
:INPUT ACCEPT [9554:1428029]
:FORWARD ACCEPT [9622:3141217]
:OUTPUT ACCEPT [8154:3399023]
:POSTROUTING ACCEPT [17776:6540240]
:zone_wan_MSSFIX - [0:0]
-A FORWARD -j zone_wan_MSSFIX 
-A zone_wan_MSSFIX -o eth0.1 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu 
COMMIT
# Completed on Wed Nov 13 11:20:52 2013
# Generated by iptables-save v1.4.10 on Wed Nov 13 11:20:52 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [8154:3399023]
:input_wan - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i br-lan -j ACCEPT 
-A INPUT -i tun0 -j ACCEPT 
-A INPUT -i eth0.1 -j input_wan 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/sec --limit-burst 50 -j ACCEPT 
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i br-lan -j ACCEPT 
-A FORWARD -i tun0 -j ACCEPT 
-A FORWARD -p tcp -j REJECT --reject-with tcp-reset 
-A FORWARD -j REJECT --reject-with icmp-port-unreachable 
-A input_wan -p udp -m udp --dport 1194 -j ACCEPT 
-A input_wan -p udp -m udp --dport 68 -j ACCEPT 
-A input_wan -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A input_wan -j REJECT --reject-with icmp-port-unreachable 
COMMIT
# Completed on Wed Nov 13 11:20:52 2013
